--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,8 +10,8 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            // 'Main' : { mainUbuntu() },
-            // 'Android': { android() },
+            'Main' : { mainUbuntu() },
+            'Android': { android() },
             'iOS' : { ios() }
         ])
     }
@@ -123,31 +123,24 @@ def ios() {
                 checkout scm
                 SCRIPTS_PATH="vcx/libvcx/build_scripts/ios/mac"
                 WORK_DIR = "/Users/jenkins"
-                sh "echo checking if dir exists"
-                sh "ls ~/IOSBuilds"
 
                 // Build ios architectures
                 sh "source vcx/ci/scripts/iosBuild.sh"
-                sh "ls ~/IOSBuilds"
-                sh "ls -l ~/IOSBuilds/libvcxall"
-                sh "ls -l ~/IOSBuilds/libvcxpartial"
 
                 // Publish to Kraken
-                // TIME_VERSION=sh (script: 'echo $(date +%Y%m%d_%H%M%S)', returnStdout: true ).trim()
-                // sh "mkdir ${TIME_VERSION}"
-                // sh "zip -r ${TIME_VERSION}/libvcxall_${TIME_VERSION}.zip vcx/wrappers/ios/vcx/lib/libvcxall.a"
 
-                // if (env.BRANCH_NAME == "master") {
-                //     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                //         sh "find ${TIME_VERSION} -type f -name 'libvcxall_${TIME_VERSION}.zip' -exec curl -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
-                //     }
-                // }
+                if (env.BRANCH_NAME == "master") {
+                    withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                        sh "find /Users/jenkins/IOSBuilds/libvcxpartial/ -type f -name 'vcx.libvcxpartial_*_universal.zip' -exec curl -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
+                        sh "find /Users/jenkins/IOSBuilds/libvcxall/ -type f -name 'vcx.libvcxall_*_universal.zip' -exec curl -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
+                    }
+                }
             } catch (Exception ex) {
                 // We currently do not fail the main build if the android and ios builds fail
-                currentBuild.result = "FAILED"
-                if (env.BRANCH_NAME == "master") {
-                    fail()
-                }
+                // currentBuild.result = "FAILED"
+                // if (env.BRANCH_NAME == "master") {
+                //     fail()
+                // }
                 echo "$ex error"
             } finally {
                 step([$class: 'WsCleanup'])
