remove local properties

--- a/vcx/wrappers/java/vcx/local.properties
+++ b/vcx/wrappers/java/vcx/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Jun 25 13:30:41 IST 2018
-ndk.dir=/Users/evernym/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/evernym/Library/Android/sdk
+# ndk.dir=/Users/evernym/Library/Android/sdk/ndk-bundle
+# sdk.dir=/Users/evernym/Library/Android/sdk
