--- a/vcx/ci/Dockerfile-libindy
+++ b/vcx/ci/Dockerfile-libindy
@@ -23,14 +23,14 @@ RUN apt-get update -y && apt-get install -y \
 RUN mkdir -p /libindy
 WORKDIR /libindy
 
-ENV LIBINDY_DEB=libindy_1.5.0_619_amd64.deb
+ENV LIBINDY_DEB=libindy_1.5.0~619_amd64.deb
 ENV LIBINDY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/master/$LIBINDY_DEB
 
 RUN curl -fsOSL $LIBINDY_DOWNLOAD_URL \
     && dpkg -i $LIBINDY_DEB \
     && apt-get -f install
 
-ENV LIBNULLPAY_DEB=libnullpay_1.5.0__619_amd64.deb
+ENV LIBNULLPAY_DEB=libnullpay_1.5.0_~619_amd64.deb
 ENV LIBNULLPAY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/master/$LIBNULLPAY_DEB
 
 RUN curl -fsOSL $LIBNULLPAY_DOWNLOAD_URL\
