test android build fixes

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,9 +10,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
+            //'Main' : { mainUbuntu() },
             'Android': { android() },
-            'iOS' : { ios() }
+            //'iOS' : { ios() }
         ])
     }
 }
@@ -103,10 +103,10 @@ def android() {
                 }
             } catch (Exception ex) {
                 // We currently do not fail the main build if the android and ios builds fai
-                // currentBuild.result = "FAILED"
-                // if (env.BRANCH_NAME == "master") {
-                    // fail()
-                // }
+                currentBuild.result = "FAILED"
+                if (env.BRANCH_NAME == "master") {
+                    fail()
+                }
                 echo "$ex error"
             } finally {
                 step([$class: 'WsCleanup'])
@@ -345,8 +345,8 @@ def buildAndroid(envn) {
     envn.inside {
         ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
         sh "./${ANDROID_SCRIPT_PATH} arm"
-        sh "./${ANDROID_SCRIPT_PATH} x86"
-        sh "./${ANDROID_SCRIPT_PATH} arm64"
+        //sh "./${ANDROID_SCRIPT_PATH} x86"
+        //sh "./${ANDROID_SCRIPT_PATH} arm64"
         //Todo: get parallel processing to work. Currently it fails on Jenkins. It must share files or something
         // parallel([
         //     'arm': { sh "./${ANDROID_SCRIPT_PATH} arm"},
