--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -30,43 +30,44 @@ def mainUbuntu() {
         stage('Main Build - Ubuntu') {
             try {
                 checkout scm
-                rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-
+				sh 'vcx/ci/scripts/buildAll.sh'
+                // rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+				
                 // update the versions in the toml file and package.json
-                updateVersions(rust)
+                // updateVersions(rust)
 
                 // build and test the so file
-                buildRust(rust)
+                // buildRust(rust)
 
                 // test rust
-                testRust(rust)
+                // testRust(rust)
 
                 // update the so file to have version
-                updateSo(rust)
+                // updateSo(rust)
 
                 // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
                 // This image must be built after the rust build and tests have been run.
-                libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
+                // libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
 
                 // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
-                vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-                testPythonWrapper(vcx_python)
+                // vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+                // testPythonWrapper(vcx_python)
 
                 // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
-                vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
-                testNodeWrapper(vcx_nodejs)
+                // vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
+                // testNodeWrapper(vcx_nodejs)
 
-                if (env.BRANCH_NAME == "master") {
+                // if (env.BRANCH_NAME == "master") {
                     // create the debian of the library (just the libvcx.so file)
-                    createDeb(rust)
+                    // createDeb(rust)
 
                     // create the npm deb
-                    createNpmDeb(rust, "*_amd64.tgz")
-                    renameAndUploadNpmTgz(rust, "vcx")
+                    // createNpmDeb(rust, "*_amd64.tgz")
+                    // renameAndUploadNpmTgz(rust, "vcx")
 
                     // create pip installable artifact
-                    createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
-                }
+                    // createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
+                // }
 
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
