--- a/vcx/ci/Dockerfile-libindy
+++ b/vcx/ci/Dockerfile-libindy
@@ -40,7 +40,7 @@ RUN mkdir -p /libindy
 WORKDIR /libindy
 
 ENV LIBINDY_DEB=libindy_${LIBINDY_VER}_amd64.deb
-ENV LIBINDY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/master/$LIBINDY_DEB
+ENV LIBINDY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/master/${LIBINDY_DEB}
 
 RUN curl -fsOSL $LIBINDY_DOWNLOAD_URL \
     && dpkg -i $LIBINDY_DEB \
