--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -46,9 +46,9 @@ def mainUbuntu() {
                 
                 withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                     def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
-                    publish.inside("-v $volumeName:$volumeInternalDir") {
+                    publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
                         sh "find $volumeInternalDir -type f -name \"*.deb\""
-                        sh "/sdk/vcx/ci/scripts/publish.sh \"*.deb\" $volumeInternalDir npm ${KRAKEN_CREDENTIALS} /sdk/vcx/output"
+                        sh "/sdk/vcx/ci/scripts/publish.sh *.deb $volumeInternalDir npm foobar:credentials"
                     }
                 }
                 // sh 'vcx/ci/scripts/buildAll.sh' $volume_name
