--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,9 +10,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
+            // 'Main' : { mainUbuntu() },
             'Android': { android() },
-            'iOS' : { ios() }
+            // 'iOS' : { ios() }
         ])
     }
 }
@@ -95,12 +95,12 @@ def android() {
                 buildAndroid(rust)
 
                 //Package .so files into .aar 
-                packageAndroid(rust)
+                // packageAndroid(rust)
 
-                //if (env.BRANCH_NAME == "master") {
+                if (env.BRANCH_NAME == "master") {
                     //Publish package on aptly
                     publishAndroid(rust)
-                //}
+                }
             } catch (Exception ex) {
                 // We currently do not fail the main build if the android and ios builds fai
                 currentBuild.result = "FAILED"
