--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -5,6 +5,9 @@ def vcx_python
 def libindy
 def vcx_nodejs
 
+def volumeName = "vcx-volume"
+def volumeInternalDir = "/sdk/vcx/output"
+
 testing()
 
 def testing() {
@@ -30,38 +33,40 @@ def buildImage(name, filename, cache='', context='.') {
 }
 
 def mainUbuntu() {
-    node('ubuntu-10') {
+    node('ubuntu') {
         stage('Main Build - Ubuntu') {
             try {
                 checkout scm
-                def volumeName = "vcx-volume"
-                def volumeInternalDir = "/sdk/vcx/output"
-				// sh "docker volume rm -f $volumeName"
+                
+				sh "docker volume rm -f $volumeName"
               
-                // def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
+                def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
 
                 // ******* Build the libvcx base image (runs tests and creates debian automatically) ********
-                // def libvcx = docker.build("libvcx", "-f vcx/ci/Dockerfile-libvcx .")
-                // sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
+                def libvcx = docker.build("libvcx", "-f vcx/ci/Dockerfile-libvcx .")
+                sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
                 
                 // ******** Builds and tests the Node JS Wrapper *******
-                //def node = docker.build("node", "-f vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper .")
-                //sh "docker run --rm -v $volumeName:$volumeInternalDir node"
+                def node = docker.build("node", "-f vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper .")
+                sh "docker run --rm -v $volumeName:$volumeInternalDir node"
 
                 // ******** Builds and tests the Python Wrapper *******
-                // def python = docker.build("python", "-f vcx/wrappers/python3/ci/Dockerfile-python-wrapper .")    
-                // sh "docker run --rm -v $volumeName:$volumeInternalDir python"
+                def python = docker.build("python", "-f vcx/wrappers/python3/ci/Dockerfile-python-wrapper .")    
+                sh "docker run --rm -v $volumeName:$volumeInternalDir python"
 
                 // ******** PUBLISHING (artifacts are in a Docker Volume) ********
                 sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
                 withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                     def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
                     publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
-                        // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                        // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                        sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                        sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
                         sh "ls $volumeInternalDir/*.tar.gz"
-                        sh 'docker run -v $volumeName:$volumeInternalDir -v $(pwd)/tmp/output:/tmp/output --rm ubuntu:16.04 sh -c \"cp ${volumeInternalDir}/* /tmp/output\"'
-                        archiveArtifacts allowEmptyArchive: true, artifacts: '~/*.tar.gz'
+                        sh 'mkdir -p vcx/output'
+                        sh "cp $volumeInternalDir/*.tar.gz vcx/output"
+                        // archive artifacts to Jenkins
+                        archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
+
                     }
                 }
                 
@@ -111,7 +116,7 @@ def mainUbuntu() {
                 }
                 echo "$ex error"
             } finally {
-                // sh 'vcx/ci/scripts/cleanup.sh' $volume_name
+                sh 'vcx/ci/scripts/cleanup.sh' $volume_name
                 step([$class: 'WsCleanup'])
             }
         }
