--- a/vcx/ci/Dockerfile-libvcx
+++ b/vcx/ci/Dockerfile-libvcx
@@ -11,7 +11,11 @@ RUN mkdir /sdk/vcx/output
 ENV PATH=${PATH}:/sdk/vcx/ci/scripts
 
 WORKDIR /sdk/vcx/libvcx
-RUN cargo test -- --test-threads=1
+RUN if [ "$VCX_TEST_FLAG" ]; \
+	then cargo build; \
+	else cargo test -- --test-threads=1; \ 
+	fi
+
 RUN cargo update-version
 RUN cargo update-so
 RUN cargo deb --no-build
