--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -44,7 +44,7 @@ def mainUbuntu() {
                 def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
 
                 // ******* Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "-f vcx/ci/Dockerfile-libvcx .")
+                def libvcx = docker.build("libvcx", "--build-arg VCX_TEST_FLAG=no -f vcx/ci/Dockerfile-libvcx .")
                 sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
                 
                 // ******** Builds and tests the Node JS Wrapper *******
