--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -44,7 +44,7 @@ def mainUbuntu() {
                 def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
 
                 // ******* Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "--build-arg VCX_TEST_FLAG=no -f vcx/ci/Dockerfile-libvcx .")
+                def libvcx = docker.build("libvcx", "--build-arg test_flag=no -f vcx/ci/Dockerfile-libvcx .")
                 sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
                 
                 // ******** Builds and tests the Node JS Wrapper *******
@@ -61,7 +61,7 @@ def mainUbuntu() {
                     def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
                     publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
                         // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                        sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                        // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
                         // sh "ls $volumeInternalDir/*.tar.gz"
                         // sh 'mkdir -p vcx/output'
                         // sh "cp $volumeInternalDir/*.tar.gz vcx/output"
