--- a/vcx/ci/Dockerfile-libvcx
+++ b/vcx/ci/Dockerfile-libvcx
@@ -9,8 +9,7 @@ COPY . /sdk
 RUN mkdir /sdk/vcx/output
 
 ARG test_flag
-ENV VCX_TEST_FLAG=$test_flag
-ENV PATH=${PATH}:/sdk/vcx/ci/scripts
+ENV VCX_TEST_FLAG $test_flag
 
 WORKDIR /sdk/vcx/libvcx
 RUN if [ "$VCX_TEST_FLAG" == "no" ]; \
