--- a/vcx/ci/Dockerfile-libvcx
+++ b/vcx/ci/Dockerfile-libvcx
@@ -10,9 +10,10 @@ RUN mkdir /sdk/vcx/output
 
 ARG test_flag
 ENV VCX_TEST_FLAG $test_flag
+ENV PATH=${PATH}:/sdk/vcx/ci/scripts
 
 WORKDIR /sdk/vcx/libvcx
-RUN if [ "$VCX_TEST_FLAG" == "no" ]; \
+RUN if [ "$VCX_TEST_FLAG" -eq "no" ]; \
 	then cargo build --color=never; \
 	else cargo test --color=never -- --test-threads=1; \ 
 	fi
