--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -5,7 +5,15 @@ def vcx_python
 def libindy
 def vcx_nodejs
 
+// ******** Artifacts Created ********
+// libvcx_<ver>.deb ----> published Debian to https://repo.corp.evernym.com/deb/pool/main/libv/libvcx/
+// vcx_<ver>.tar.gz ----> archived with Jenkins
+// vcx_<ver>.tgz ----> published with Filely to https://repo.corp.evernym.com/filely/npm/
 
+
+// ********* OTHERS ********
+// libvcx.tar.gz (libvcx.so file and provision_agent_keys.py) ----> archived with Jenkins
+// vcx_<ver>.deb (Nodejs Wrapper Debian Package) ----> archived with Jenkins and Published to repo.corp.evernym.com/deb/pool
 
 testing()
 
@@ -44,7 +52,7 @@ def mainUbuntu() {
                 def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
 
                 // ******* Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "--build-arg test_flag=no -f vcx/ci/Dockerfile-libvcx .")
+                def libvcx = docker.build("libvcx", "--build-arg -f vcx/ci/Dockerfile-libvcx .")
                 sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
                 
                 // ******** Builds and tests the Node JS Wrapper *******
@@ -52,63 +60,30 @@ def mainUbuntu() {
                 sh "docker run --rm -v $volumeName:$volumeInternalDir node"
 
                 // ******** Builds and tests the Python Wrapper *******
-                // def python = docker.build("python", "-f vcx/wrappers/python3/ci/Dockerfile-python-wrapper .")    
-                // sh "docker run --rm -v $volumeName:$volumeInternalDir python"
+                def python = docker.build("python", "-f vcx/wrappers/python3/ci/Dockerfile-python-wrapper .")    
+                sh "docker run --rm -v $volumeName:$volumeInternalDir python"
 
-                // ******** PUBLISHING (artifacts are in a Docker Volume) ********
-                sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
-                withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                    def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
-                    publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
-                        // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                        // sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
-                        // sh "ls $volumeInternalDir/*.tar.gz"
-                        // sh 'mkdir -p vcx/output'
-                        // sh "cp $volumeInternalDir/*.tar.gz vcx/output"
-                        // // archive artifacts to Jenkins
-                        // archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
+                if (env.BRANCH_NAME == "master") {
+                    // ******** PUBLISHING (artifacts are in a Docker Volume) ********
+                    sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
+                    withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                        def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
+                        publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
+                            // ******** Publish to debian repo ********
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            // ******** Publish to npm filely repo ********
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
+                 
+                            // ******** Archive with Jenkins ********
+                            sh "ls $volumeInternalDir/*.tar.gz"
+                            sh 'mkdir -p vcx/output'
+                            sh "cp $volumeInternalDir/*.tar.gz vcx/output"
+                            archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
 
+                        }
                     }
                 }
-                
-                // sh 'vcx/ci/scripts/buildAll.sh' $volume_name
-                // rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-				
-                // update the versions in the toml file and package.json
-                // updateVersions(rust)
-
-                // build and test the so file
-                // buildRust(rust)
-
-                // test rust
-                // testRust(rust)
-
-                // update the so file to have version
-                // updateSo(rust)
-
-                // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
-                // This image must be built after the rust build and tests have been run.
-                // libindy_old = build('libindy_old', 'vcx/ci/Dockerfile-libindy', 'vcx')
-
-                // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
-                // vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-                // testPythonWrapper(vcx_python)
-
-                // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
-                // vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
-                // testNodeWrapper(vcx_nodejs)
-
-                // if (env.BRANCH_NAME == "master") {
-                    // create the debian of the library (just the libvcx.so file)
-                    // createDeb(rust)
-                    
-                    // create the npm deb
-                    // createNpmDeb(rust, "*_amd64.tgz")
-                    // renameAndUploadNpmTgz(rust, "vcx")
-
-                    // create pip installable artifact
-                    // createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
-                // }
 
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
@@ -190,95 +165,6 @@ def ios() {
             }
 
         }
-    }
-}
-
-def getRevisionFromGit() {
-    revision = sh 'git log --pretty=format:\'%h\' -n 1'
-    return revision
-}
-
-def addCert(envn) {
-    envn.inside {
-        CERT_SCRIPT = 'vcx/ci/scripts/getCert.sh'
-        // get Evernym Certificate onto machine
-        sh "${CERT_SCRIPT}"
-    }
-}
-
-def uploadPrivateNpm(envn) {
-    envn.inside {
-        withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-            // upload npm module
-            sh "find vcx/wrappers/node/ -type f -name 'vcx-*.tgz' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/npm/upload -F 'file=@{}' \\;"
-        }
-    }
-}
-// This runs a python script that extracts version information out of the Cargo.toml file.
-def getVcxVersion(envn){
-    envn.inside {
-        withEnv(["PYTHONPATH=/scripts"]) {
-            version = sh(
-                script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
-                returnStdout: true
-            )
-            return version
-        }
-    }
-}
-
-def testPythonWrapper(envn){
-    envn.inside {
-        sh "python3 -m pytest"
-    }
-
-}
-
-def buildRust(envn){
-    envn.inside {
-        sh "rustc --version"
-        sh "gcc --version"
-        sh "cd vcx/libvcx; cargo build --features ci --color=never"
-    }
-}
-
-def testRust(envn) {
-    envn.inside {
-        sh "cd vcx/libvcx; cargo test --color=never -- --test-threads=1"
-    }
-}
-
-// Creates a tar.gz file that is installable from pip.
-def createPtyhonArtifact(envn, version) {
-    dir('vcx/wrappers/python3'){
-        sh 'echo Building Python Artifact'
-        withEnv(["VCX_VERSION=${version}"]) {
-            envn.inside {
-                sh(
-                    script: "python3 setup.py sdist",
-                    returnStdout: true
-                )
-                archiveArtifacts allowEmptyArchive: true, artifacts: 'dist/**/*.tar.gz'
-            }
-        }
-    }
-}
-
-// Update the version and revision in the Cargo.toml file, also the so file .
-def updateVersions(app) {
-    app.inside {
-        sh 'ls -l'
-        // TODO fix this ... these *SHOULD* be cargo commands.
-        sh 'cd vcx/libvcx; ls -l; ls ../ci/scripts'
-        sh 'cd vcx/libvcx; python ../ci/scripts/cargo-update-version'
-
-    }
-}
-
-// Updates the libvcx.so file to libvcx<VER>.so
-def updateSo(app) {
-    app.inside {
-        sh 'cd vcx/libvcx; python ../ci/scripts/cargo-update-so'
     }
 }
 
