--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,9 +10,9 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            // 'Main' : { mainUbuntu() },
+            'Main' : { mainUbuntu() },
             'Android': { android() },
-            // 'iOS' : { ios() }
+            'iOS' : { ios() }
         ])
     }
 }
