--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -52,38 +52,48 @@ def mainUbuntu() {
                 def libindy = docker.build("libindy", "-f vcx/ci/Dockerfile-libindy .")
 
                 // ******* Build the libvcx base image (runs tests and creates debian automatically) ********
-                def libvcx = docker.build("libvcx", "--build-arg -f vcx/ci/Dockerfile-libvcx .")
+                def libvcx = docker.build("libvcx", "-f vcx/ci/Dockerfile-libvcx .")
                 sh "docker run --rm -v $volumeName:$volumeInternalDir libvcx"
                 
                 // ******** Builds and tests the Node JS Wrapper *******
                 def node = docker.build("node", "-f vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper .")
                 sh "docker run --rm -v $volumeName:$volumeInternalDir node"
-
+                
                 // ******** Builds and tests the Python Wrapper *******
                 def python = docker.build("python", "-f vcx/wrappers/python3/ci/Dockerfile-python-wrapper .")    
                 sh "docker run --rm -v $volumeName:$volumeInternalDir python"
+                
 
-                if (env.BRANCH_NAME == "master") {
+                // ******** Creates Npm Debian Installable Package For Node ********
+                
+
+                // if (env.BRANCH_NAME == "master") {
                     // ******** PUBLISHING (artifacts are in a Docker Volume) ********
                     sh "docker build -t publish -f vcx/ci/Dockerfile-publish ."
                     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                         def publish = docker.build('publish', "-f vcx/ci/Dockerfile-publish .")
                         publish.inside("--network=host -v $volumeName:$volumeInternalDir") {
                             // ******** Publish to debian repo ********
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
-                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"libvcx*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            
                             // ******** Publish to npm filely repo ********
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"*.tgz\" https://kraken.corp.evernym.com/repo/npm/upload"
                  
+                            // ******** Publish vcx Debian To Repo (NPM PACKAGES) 
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/agency_dev/upload"
+                            sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
+
                             // ******** Archive with Jenkins ********
-                            sh "ls $volumeInternalDir/*.tar.gz"
-                            sh 'mkdir -p vcx/output'
-                            sh "cp $volumeInternalDir/*.tar.gz vcx/output"
-                            archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
+                            sh "cp $volumeInternalDir/* vcx/output"
+                            sh "ls $volumeInternalDir"
+                            // archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
+                            // archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx*.deb'
+                            archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/*'
 
                         }
                     }
-                }
+                // }
 
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
