--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -40,7 +40,7 @@ def buildImage(name, filename, cache='', context='.') {
 }
 
 def mainUbuntu() {
-    node('ubuntu-10') {
+    node('ubuntu-11') {
         stage('Main Build - Ubuntu') {
             def volumeName = "vcx-volume"
             def volumeInternalDir = "/sdk/vcx/output"
@@ -85,6 +85,7 @@ def mainUbuntu() {
                             sh "/sdk/vcx/ci/scripts/publish.sh \"${KRAKEN_CREDENTIALS}\" \"vcx_*.deb\" https://kraken.corp.evernym.com/repo/portal_dev/upload"
 
                             // ******** Archive with Jenkins ********
+                            sh "mkdir -p vcx/output"
                             sh "cp $volumeInternalDir/* vcx/output"
                             sh "ls $volumeInternalDir"
                             // archiveArtifacts allowEmptyArchive: true, artifacts: 'vcx/output/**/*.tar.gz'
